[Fix] Text wrap issue

--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -8,7 +8,7 @@
 }
 
 .w-94 {
-  width: 94%;
+  width: 90%;
 }
 
 /* .center-width {
